--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/robertojrojas/self-registration-MEAN/issues"
   },
-  "homepage": "https://github.com/robertojrojas/self-registration-MEAN"
+  "homepage": "https://github.com/robertojrojas/self-registration-MEAN",
+  "dependencies": {
+    "jade": "^1.3.1",
+    "express": "^3.5.1"
+  }
 }
