--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/robertojrojas/self-registration-MEAN",
   "dependencies": {
     "jade": "^1.3.1",
-    "express": "^3.5.1"
+    "express": "^3.5.1",
+    "stylus": "^0.42.3"
   }
 }
