--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "jade": "^1.3.1",
     "express": "^3.5.1",
-    "stylus": "^0.42.3"
+    "stylus": "^0.42.3",
+    "mongoose": "^3.8.8"
   }
 }
