--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "express": "^3.5.1",
     "stylus": "^0.42.3",
     "mongoose": "^3.8.8"
+  },
+  "devDependencies": {
+    "mocha": "^1.18.2"
   }
 }
